--- a/lab4/lab4-c-sharp/ProducerConsumer/DinnerPholisophers.csproj
+++ b/lab4/lab4-c-sharp/ProducerConsumer/DinnerPholisophers.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Dinner_Philosophers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
